Add special requestion column in parties and catering  and fix number of people column in table reservations
